--- a/assets/public/index.html
+++ b/assets/public/index.html
@@ -13,5 +13,15 @@
       <a href="/public/register.html">Register</a>
       <a href="/public/login.html">Login</a>
     </nav>
+
+    <!-- TODO: Make livereload script added in development only -->
+    <script>
+      document.write(
+        '<script src="http://' +
+          (location.host || "localhost").split(":")[0] +
+          ':35729/livereload.js?snipver=1"></' +
+          "script>",
+      );
+    </script>
   </body>
 </html>
